--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 </head>
 
 <header>
-    <h1>Flashcards App</h1>
+    <a href="{% url 'index-page' %}" class="home-page">Flashcards App</a>
     {% include "flashcards/navigation.html" %}
 </head>
 
