--- a/templates/flashcards/box_list.html
+++ b/templates/flashcards/box_list.html
@@ -1,7 +1,7 @@
 {% load humanize %}
 
 {% for box in boxes %}
-    <a href="{% url 'box' box_num=box.number %}" class="home">
+    <a href="{% url 'box' box_num=box.number %}" class="boxes">
         🗳{{ box.number | ordinal }} Box <mark>{{ box.card_count }}</mark>
     </a>
 {% endfor %}
