--- a/templates/flashcards/navigation.html
+++ b/templates/flashcards/navigation.html
@@ -3,9 +3,10 @@
 
 
 <nav class="nav-bar">
-    <a href="{% url 'index-page' %}" class="home">Home Page</a>
     <a href="{% url 'card-list' %}" class="home">🗂 All Cards</a>
+    <a href="{% url 'user-profile' %}" class="home">🗂 Your Cards</a>
     <a href="/accounts/login/" class="home">Login</a>
     <a href="/accounts/register/" class="home">Register</a>
+    <a href="/accounts/logout/" class="home">Logout</a>
 </nav>
 {% boxes_as_links %}
