--- a/templates/flashcards/card_list.html
+++ b/templates/flashcards/card_list.html
@@ -13,8 +13,12 @@
                 <H4 class="box-list"> 🗳 {{ card.box | ordinal }} Box</H4>
             {% endifchanged %}
             <div class="container">
+                {% if user.is_authenticated %}
+                    <p>Hi {{ user.username }}</p>
+                {% endif %}
                 {% include "flashcards/card.html" %}
             </div>
+            
         {% endfor %}
     
     
