--- a/templates/flashcards/index.html
+++ b/templates/flashcards/index.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 <h2>Welcome to your Flashcards App</h2>
-
+<h2>Build Your Own Flashcards By Creating an Account and Logging In</h2>
+<h2>Test Yourself By Clicking On Your Boxes</h2>
 <img src="https://students.ubc.ca/sites/students.ubc.ca/files/Flashcards-2.gif" alt="flashcards">
 
 
