--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,7 @@ h1{
 
 
 .question{
-    font-family: cursive;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 2rem;
 }
 
@@ -44,7 +44,7 @@ body{
 .boxes{
     color: orange;
     font-size:1.5rem;
-    margin: 10px;
+    margin: 20px;
 }
 
 
