--- a/templates/flashcards/profile.html
+++ b/templates/flashcards/profile.html
@@ -8,8 +8,8 @@
     <p>Here are your flashcards for you to Review, Edit, or Delete</p>
     <p>Test yourself by clicking on the 🗳boxes above </p>
     <hr>
-    <p><a href="{% url 'card-create' %}">
-    <button class="edit_buttons">Create New Card</button></a></p>
+    <a href="{% url 'card-create' %}">
+    <button class="edit_buttons">Create New Card</button></a>
     {% for card in cards %}
         {% ifchanged %}
             <H4 class="box-list"> 🗳 {{ card.box | ordinal }} Box</H4>
